<resources>
    <string name="app_name">App Manager</string>
    <string name="description_about_app">Better familiar with your applications</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="label_user_apps">User Apps</string>
    <string name="label_system_apps">System Apps</string>
    <string name="label_favorite_apps">Favorite Apps</string>
    <string name="label_functions">Functions</string>
    <string name="label_share_this_app">Share this app</string>
    <string name="label_setting">Setting</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_about">About</string>

</resources>
