<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_apps"
            android:icon="@drawable/ic_phone"
            android:title="@string/label_user_apps"
            />
        <item
            android:id="@+id/nav_system_apps"
            android:icon="@drawable/ic_android"
            android:title="@string/label_system_apps"
            />
        <item
            android:id="@+id/nav_favorite_apps"
            android:icon="@drawable/ic_favorite"
            android:title="@string/label_favorite_apps"
            />
    </group>

    <item android:title="@string/label_functions">
        <menu>
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_share"
                android:title="@string/label_share_this_app"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/label_feedback"
                />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/label_setting"
                />
        </menu>
    </item>

</menu>
